Tras pruebas pasando variables por comandos. Se ha llegado a un punto muerto que mas adelante y con tiempo se podra desarrollar

--- a/modules/swagger-codegen/src/main/resources/JavaSpring/libraries/spring-boot/RFC3339DateFormat.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaSpring/libraries/spring-boot/RFC3339DateFormat.mustache
@@ -1,4 +1,4 @@
-package {{basePackage}};
+package {{bPackage}};
 
 import com.fasterxml.jackson.databind.util.ISO8601DateFormat;
 import com.fasterxml.jackson.databind.util.ISO8601Utils;
