--- a/modules/swagger-codegen/src/main/resources/JavaSpring/libraries/spring-boot/swagger2SpringBoot.mustache
+++ b/modules/swagger-codegen/src/main/resources/JavaSpring/libraries/spring-boot/swagger2SpringBoot.mustache
@@ -1,4 +1,4 @@
-package {{basePackage}};
+package {{bPackage}};
 
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.ExitCodeGenerator;
@@ -10,7 +10,7 @@ import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 @SpringBootApplication
 @EnableSwagger2
-@ComponentScan(basePackages = "{{basePackage}}")
+@ComponentScan(basePackages = "{{bPackage}}")
 public class Swagger2SpringBoot implements CommandLineRunner {
 
 	@Override
